# tamago

./: Cargo.toml  LICENSE.txt  README.md
examples/: attributes.rs  getting_started.rs  identifiers.rs  module_header_source.rs  source_locations.rs  tagged_union.rs  types_and_expressions.rs
src/: attribute.rs  block.rs  comment.rs  conditional.rs  enums.rs  escape.rs  expr.rs  formatter.rs  function.rs  ident.rs  lib.rs  loops.rs  module.rs  preprocessor.rs  scope.rs  static_assert.rs  storage.rs  structs.rs  typedef.rs  types.rs  union.rs  variable.rs
tamacro/: Cargo.toml  README.md
tamacro/src/: lib.rs
