[package]
name = "tamago"
version = "0.2.0"
edition = "2024"

description = "Library for generating C code"
license = "MIT"
license-file = "LICENSE.txt"
authors = ["Nobuharu Shimazu <nobu.bichanna@gmail.com>"]
homepage = "https://github.com/bichanna/castella/tree/main/tamago"
repository = "https://github.com/bichanna/castella/tree/main/tamago"
readme = "README.md"
keywords = ["code", "generator", "code_generator"]

[dependencies]
tamacro = { path = "./tamacro", version = "0.1.0" }

[lib]
doctest = false
