[package]
name = "tamacro"
version = "0.1.0"
edition = "2024"

description = "tamacro"
license = "MIT"
authors = ["Nobuharu Shimazu <nobu.bichanna@gmail.com>"]
homepage = "https://github.com/bichanna/castella/tree/main/tamago/tamacro"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
